--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,20 @@ figure {
     background-position: center;
     float: left;
     display: block;
-    height: 400px;
+    height: 500px;
+    position: relative;
+}
+
+figure:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left:0;
+  right:0;
+  background: rgba(0,0,0,0.5);
+  opacity: 0;
+  transition: 300ms;
 }
 
 figure.one {
@@ -76,4 +89,34 @@ figure.four {
   background-image: url('../img/block4.jpg');
   width: 67%;
   margin-left: 3%;
+}
+
+.text-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: 2;
+  opacity: 0;
+  transition: 300ms ease;
+}
+
+.text-wrapper span {
+  text-transform: uppercase;
+  font-size: 15px;
+  color: white;
+  margin-bottom: 5px;
+}
+
+.text-wrapper h2 {
+  text-transform: uppercase;
+  font-size: 36px;
+  color: white;
+  margin-bottom: 5px;
+  font-weight: 300;
+}
+
+figure:hover .text-wrapper, figure:hover:after {
+  opacity: 1;
 }
