--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ main {
   background-image: url('../img/header.jpg');
   width: 100%;
   height: 60vh;
-  margin-bottom: 60px;
+  margin-bottom: 4%;
   position: relative;
 }
 
@@ -43,6 +43,7 @@ article {
 article section {
   overflow: auto;
   clear: both;
+  margin: 0 4%;
 }
 
 figure {
@@ -51,6 +52,7 @@ figure {
     background-position: center;
     float: left;
     display: block;
+    width: 100%;
     height: 500px;
     position: relative;
 }
@@ -63,33 +65,29 @@ figure:after {
   left:0;
   right:0;
   background: rgba(0,0,0,0.5);
-  opacity: 0;
-  transition: 300ms;
 }
 
 figure.one {
   background-image: url('../img/block1.jpg');
-  width: 67%;
-  margin-right: 3%;
   margin-bottom: 3%;
 }
 
 figure.two {
   background-image: url('../img/block2.jpg');
-  width: 30%;
   margin-bottom: 3%;
 }
 
 figure.three {
   background-image: url('../img/block3.jpg');
-  width: 30%;
+  margin-bottom: 3%;
 }
 
 figure.four {
   background-image: url('../img/block4.jpg');
-  width: 67%;
-  margin-left: 3%;
+  margin-bottom: 3%;
 }
+
+
 
 .text-wrapper {
   position: absolute;
@@ -98,8 +96,6 @@ figure.four {
   transform: translate(-50%, -50%);
   text-align: center;
   z-index: 2;
-  opacity: 0;
-  transition: 300ms ease;
 }
 
 .text-wrapper span {
@@ -117,6 +113,40 @@ figure.four {
   font-weight: 300;
 }
 
-figure:hover .text-wrapper, figure:hover:after {
-  opacity: 1;
+
+
+@media screen and (min-width: 768px) {
+
+  figure.one {
+    width: 67%;
+    margin-right: 3%;
+  }
+
+  figure.two {
+    width: 30%;
+  }
+
+  figure.three {
+    width: 30%;
+  }
+
+  figure.four {
+    width: 67%;
+    margin-left: 3%;
+  }
+
+  .text-wrapper {
+    opacity: 0;
+    transition: 300ms ease;
+  }
+
+  article figure:after {
+    opacity: 0;
+    transition: 300ms;
+  }
+
+  figure:hover .text-wrapper, figure:hover:after {
+    opacity: 1;
+  }
+
 }
