--- a/css/global.css
+++ b/css/global.css
@@ -105,7 +105,7 @@ footer .kontakt .name {
   height: auto;
 }
 /*styling for desktop*/
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 640px) {
   /*Sætter header til fixed, så når man scroller
    forbliver den i toppen*/
   header {
@@ -146,7 +146,7 @@ footer .kontakt .name {
   }
 
   svg {
-  	width: 10%;
+  	width: 120px;
   	height: auto;
   }
   /*stylling for menu for desktop*/
