Minior tweaks and changes

--- a/css/global.css
+++ b/css/global.css
@@ -49,10 +49,10 @@ svg {
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 999;
+  z-index: 1;
   top: 0;
   right: 0;
-  background-color: #DBF3C8;
+  background-color: #000;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -64,14 +64,15 @@ svg {
   margin-top: 5px;
   text-decoration: none;
   font-size: 25px;
-  color: #000;
+  color: #fff;
   display: block;
   transition: 0.3s;
+  text-transform: uppercase;
 }
 /*This show what side you are on in the nav bar*/
 .sidenav a.active {
   font-weight: bold;
-  color: 000;
+  color: #fff;
 }
 /*Position and styling for the close button (top right corner)*/
 .sidenav .closebtn {
@@ -173,6 +174,7 @@ footer .kontakt .name {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    text-transform: uppercase;
   }
   .desktopnav a.active {
     text-decoration: underline;
