--- a/css/kasper.css
+++ b/css/kasper.css
@@ -34,7 +34,7 @@ main {
   color: white;
   text-align: center;
   z-index: 2;
-  font-size: 70px;
+  font-size: 40px;
 }
 
 
@@ -122,6 +122,8 @@ figure.four {
 
 /* Desktop style */
 @media screen and (min-width: 768px) {
+
+  .front .header h1 { font-size: 70px; }
 
   figure.one {
     width: 67%;
