--- a/css/nicoline.css
+++ b/css/nicoline.css
@@ -15,7 +15,7 @@ img {
 
 .topbillede {
   position: relative;
-  background-image: url('../img/header.jpg');
+  background-image: url('../img/projekt2-header.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -199,6 +199,7 @@ aside {
 
 .text-wrapper {
   margin-left: 3%;
+  float: left;
 
 }
 
